Fixed blog page navigations. Updated a couple styles. Made the list styles visible in the articles.

--- a/css/app.css
+++ b/css/app.css
@@ -126,7 +126,7 @@ h1 {
 }
 h1 a, h2 a {
 	color: #594F4B;
-	font-weight: bold;
+	font-weight: 900;
 }
 h2 a:hover {
 	color: #706561;
@@ -178,6 +178,9 @@ display:none
 #content .entry-content a:hover {
 	color: #EF7C64;
 }
+#content .entry-content ul {
+	list-style: inside;
+}
 #container > header {
 	border-bottom: 1px solid #F6D9D2;
 }
@@ -227,7 +230,7 @@ dl.nav dd:first-child .arrow-down {
 	left: 0px;
 }
 dl.nav dd {
-	margin: 0 2.7%;
+	margin: 0 3.2%;
 }
 dl.nav dd:first-child {
 	margin-left: 0;
@@ -722,25 +725,26 @@ input.button:hover {
 ----------------------------------------- */
 @media only screen and (max-width: 1023px) {
 	.comment-count { display: none; }
-	dl.nav dd { margin: 0 2.5%; }
-	#social_connections li { margin: 0 4% 0 4%; }
+	dl.nav dd { margin: 0 3%; }
+	#social_connections li { margin: 0 3.9% 0 3.9%; }
 }
 @media only screen and (max-width: 995px) {
-	dl.nav dd { margin: 0 2.2%; }
+	dl.nav dd { margin: 0 2.8%; }
 }
 @media only screen and (max-width: 935px) {
-	dl.nav dd { margin: 0 2%; }
+	dl.nav dd { margin: 0 2.5%; }
 	#social_connections li { margin: 0 3.2% 0 3.2%; }
 }
 @media only screen and (max-width: 910px) {
-	dl.nav dd { margin: 0 1.3%; }
+	dl.nav dd { margin: 0 2.2%; }
+	#social_connections li { margin: 0 2.8%; }
 }
 @media only screen and (max-width: 840px) {
-	dl.nav dd { margin: 0 .8%; }
+	dl.nav dd { margin: 0 1.6%; }
+	#social_connections li { margin: 0 2.4%; }
 }
 @media screen and (max-width: 767px) {
 	h1 { font-size: 32px; font-size: 3.2rem; line-height: 2.7; }
-	dl.nav dd { margin: 0 1.8%; width: 25%; }
 	dl.nav dd:first-child { display: none; }
 	aside { display: none;}
 	header > nav { overflow: auto; height: 100% }
